# edgeless-functions

./: Cargo.toml  LICENSE  README.md
.github/workflows/: compile-rust.yml  push.yml
ping/: pinger.wasm
src/: lib.rs  main.rs
