# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-License-Identifier: MIT
[workspace]

[profile.release]
lto = true
opt-level = "s"

[package]
name = "edgeless_sample_hello-world"
version = "0.1.0"
authors = ["Chen Chen <cc2181@cam.ac.uk>"]
edition = "2021"

[lib]
name = "edgeless_sample_hello-world"
path = "src/lib.rs"



